2002-01-09  Alexander Dupuy  <dupuy@sysdetect.com>

	* test/test_url.c (PRINT_ELEMENT): test bk_url_unescape

	* lib/b_url.c (bk_url_unescape): new function to expand % escapes
	(bk_url_parse): separate strict parse flag for function from flags
	in structure
	(count_colons): eliminated this obsolete static function
	
	* lib/b_general.c (bk_general_proctitle_init): don't confuse flag
	for function with flag in structure; always turn off proctitle
	stuff when running with Insure++

	* lib/b_debug.c (bk_debug_destroy): free bk_debug struct itself

	* include/libbk.h (BK_OR): wrap GNU extension to ?: omitting middle arg

	* include/libbk_i18n.h: INSIGHT->INSURE, include <locale.h>

	* include/libbk_include.h (u_int#_t): work around esoteric gcc'isms
	that Insure++ doesn't grok at all

2002-01-08  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_string.c (bk_string_str2xml): Function to convert a normal
	string to an xml string.

2002-01-02  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_nvmap.c (bk_nvmap_value2name): Functions to map strings to values.

2001-12-31  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_data_destroy): make sure that ptr
	exists before freeing.

2001-12-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: <netinet/if_ether.h> if no <net/ethernet.h>

2001-12-27  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_url.c (bk_url_parse): missed a few critical search
	stopping characters in the fuzzy logic code. 

2001-12-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/Makefile ($(GROUPTOP)/include/libbk_autoconf.h): create link
	to bkmk-generated file

	* include/libbk_include.h: use BK_MINGW, autoconf HAVE_ defines

	* include/libbk.h: include libbk_autoconf.h

	* include/Makefile (BK_PUBLIC_INC): install libbk_autoconf.h

2001-12-21  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c: constifying

2001-12-21  James Tanis  <jtt@winwood.sysdetect.com>
